--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ android {
         }
     }
 
+    compileOptions{
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+
 }
 
 dependencies {
@@ -38,5 +44,25 @@ dependencies {
 
     // 메테리얼
     implementation 'com.google.android.material:material:1.1.0'
+
+    // 레트로핏
+    def retrofit_version = "2.8.1"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    // gson 컨버터
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    // 레트로핏 로깅 인터셉터
+    implementation "com.squareup.okhttp3:logging-interceptor:4.8.1"
+
+
+
+
+
+
+
+
+
+
+
 
 }
