added photo grid recyclerview

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,9 @@ dependencies {
     // 레트로핏 로깅 인터셉터
     implementation "com.squareup.okhttp3:logging-interceptor:4.8.1"
 
-
+    // 글라이드 이미지 라이브러리
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 
 
