coroutine flow debounce 적용

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,8 +73,9 @@ dependencies {
     implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
 
 
-
-
+    // 코루틴
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0-M1'
 
 
 }
